<resources xmlns:tools="http://schemas.android.com/tools"
           tools:ignore="MissingTranslation">
    <string name="app_name">帮帮忙</string>


    <!--下拉刷新-->
    <string name="pull_to_refresh">下拉刷新</string>
    <string name="release_to_refresh">释放刷新</string>
    <string name="refreshing">正在刷新</string>
    <string name="not_updated_yet">暂未更新过</string>
    <string name="updated_at">最后更新：%1$s</string>
    <string name="time_error">时间有问题</string>


    <string name="have_send">已发送</string>
    <string name="verify_number_error">验证码错误</string>
    <string name="verify_number">验证码</string>
    <string name="password_error">密码错误</string>
    <string name="group_error">您的手机号码已注册用户版，请使用新号码注册</string>
    <string name="group_error_disable">账号已禁用</string>
    <string name="user_is_Existed">用户已存在</string>
    <string name="get_verify">获取验证码</string>
    <string name="please_fill_out_the_complete">请填写完成后操作！</string>
    <string name="phone_is_not_correct">手机号格式不正确</string>
    <string name="abnormal_server">服务器异常，请重试</string>
    <string name="net_time_out">网络连接超时，请重试</string>
    <string name="abnormal_data_processing">数据处理异常</string>
    <string name="no_network">暂无网络</string>
    <string name="login_has_expired">登录已过期</string>



    <string name="save">保存</string>
    <string name="family_call_permission_agree">同意相机和录音权限才能够使用亲情电话功能</string>
    <string name="please_agree_permission">请同意权限申请</string>
    <string name="please_choice_photo_from">请选择图片来源</string>
    <string name="take_photo">拍照</string>
    <string name="photo_album">相册</string>


    <string name="certified_fail">您提交的认证申请没有通过审核，请重新认证～</string>
    <string name="certified_wait">您提交的认证申请正在审核中，请耐心等待～</string>
    <string name="certified_not">您还未进行资格认证</string>
    <string name="certified_fail_send">重新认证</string>
    <string name="certified_not_send">马上认证</string>
    <string name="please_fill_in">请填写</string>
    <string name="please_select">请选择</string>
    <string name="send_message">立即沟通</string>
    <string name="delete_lawyer_order">删除订单</string>


    <string name="pause">暂停</string>
    <string name="go_on">继续</string>
    <string name="retry">重试</string>
    <string name="skip">跳过</string>
    <string name="status">在线</string>
    <string name="install">安装</string>
    <string name="update_now">现在更新</string>
    <string name="download_background">后台下载</string>

    <!-- location -->
    <string name="location_navigate">导航</string>
    <string name="location_loading">正在定位</string>
    <string name="location_map">地图定位</string>
    <string name="my_location">我的位置</string>
    <string name="location_address_unkown">该位置信息暂无</string>
    <string name="format_mylocation">我的位置：%s</string>
    <string name="location_address_fail">获取位置信息失败</string>
    <string name="tools_selected">选择工具</string>
    <string name="friends_map_navigation_web">在网页中打开</string>
    <string name="location_open_map_error">打开地图出错</string>


    <string name="qualification_authentication_2">
        <u>《法律咨询协议》</u>
    </string>
    <string name="feedback">意见反馈</string>
    <string name="laws_counsel">法律咨询</string>

    <string name="property_dispute">财产纠纷</string>
    <string name="property_dispute_tips">最大化维护您的合法权益</string>
    <string name="msttishr_family">婚姻家庭</string>
    <string name="msttishr_family_tips">让法律守护你我他</string>
    <string name="traffic_accident">交通事故</string>
    <string name="traffic_accident_tips">优质、高效的法律帮助</string>
    <string name="work_cover">工伤赔偿</string>
    <string name="work_cover_tips">尽职尽责，专业诚信</string>
    <string name="icon_contract_dispute">合同纠纷</string>
    <string name="icon_contract_dispute_tips">专业高效，值得托付</string>
    <string name="criminal_defense">刑事辩护</string>
    <string name="criminal_defense_tips">好律师就在身边</string>
    <string name="property_disputes">房产纠纷</string>
    <string name="property_disputes_tips">认证律师，高效出函</string>
    <string name="labour_employment">劳动就业</string>
    <string name="labour_employment_tips">资深专业，经验丰富</string>
    <string name="counsel_category">咨询类别</string>
    <string name="publish_order">发布抢单</string>
    <string name="consulting_fees">咨询费用</string>
    <string name="cost20_at_least">最低金额不低于20元</string>
    <string name="more_consulting_fee">咨询费用越多</string>
    <string name="reply">回复</string>
    <string name="efficient">效率</string>
    <string name="and_yu">与</string>
    <string name="quality">质量</string>
    <string name="higher">越高</string>
    <string name="yuan">元</string>
    <string name="price_least_tips">最低金额不低于</string>

    <string name="select_pay_type">选择支付方式</string>
    <string name="need_pay_this_time">本次购买需要支付</string>
    <string name="ali_pay">支付宝支付</string>
    <string name="wx_pay">微信支付</string>
    <string name="pay_confirm">确认支付</string>
    <string name="please_enter_price">请输入金额</string>
    <string name="minutes_20">20分钟</string>
    <string name="laws_contract">法律咨询协议</string>
    <string name="use_intro">使用说明</string>
    <string name="please_agree_laws_contract">请同意法律咨询协议</string>
    <string name="pay_success">支付成功</string>
    <string name="confirm">确定</string>
    <string name="pay_success_laws_tips">您已成功发布咨询，请耐心等待律师接单</string>
    <string name="order_detail">订单详情</string>
    <string name="serial_number">编号</string>
    <string name="have_paid">已支付</string>
    <string name="waiting_4_pay">待支付</string>
    <string name="order_pay_tips">＊三天内无人接单，系统自动取消; \n 无人接单／律师拒单后，付款金额将于7个工作日内原路返回。 \n
        每笔订单视频通话时长为20分钟，通话时长未用完结束订单一律不退还费用
    </string>
    <string name="authorized">已授权</string>
    <string name="have_refunded">已退款</string>
    <string name="have_cancelled">已取消</string>
    <string name="unknown_status">未知状态</string>
    <string name="waiting_4_receiving">待接单</string>
    <string name="unknow">未知</string>
    <string name="have_accepted_order">已接单</string>
    <string name="accepted_time">接单时间</string>
    <string name="finish_time">完成时间</string>
    <string name="linkup_now">立即沟通</string>
    <string name="end_consult">结束咨询</string>
    <string name="canceled_time">取消时间</string>
    <string name="have_completed">已完成</string>
    <string name="delete_order">删除订单</string>
    <string name="cancel_order">取消订单</string>
    <string name="you_have_pending_orders">您有订单未处理，请先处理</string>

    <string name="please_enter_service_comment">请填写本次服务评价，200字以内！</string>
    <string name="resolve_problem_y_o_n">是否解决问题</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="please_score_the_server">请对本次服务进行打分</string>
    <string name="laws_service_">律师服务：</string>
    <string name="have_solved_problem">已解决问题</string>
    <string name="have_not_solved_problem">未解决问题</string>
    <string name="service_comment">服务评价</string>
    <string name="the_user_have_not_comment">此用户没有填写评价</string>
    <string name="delete_success">删除成功</string>
    <string name="delete">删除</string>
    <string name="cancel_reason">取消原因</string>
    <string name="auto_cancel_in_3_days">三天内无人接单，系统自动取消</string>
    <string name="user_cancel_order">用户主动取消</string>

    <string name="please_add_advice">请补充详细问题和意见</string>
    <string name="please_enter_content">请输入不少于10个字的描述</string>
    <string name="please_provide_picture_4_most">请提供相关问题的截图或照片（最多4张）</string>
    <string name="uploading">上传中...</string>
    <string name="upload_successful">上传成功</string>
    <string name="upload_fail">上传失败</string>
    <string name="upload_evidence">上传凭证</string>
    <string name="commit">提交</string>
    <string name="storage_size_percent">约占据手机%s的存储空间</string>
    <string name="had_no_cache">已经没有缓存文件</string>
    <string name="calculating_used_space">正在计算已用空间</string>
    <string name="used_space">已用空间</string>
    <string name="storage_space">存储空间</string>
    <string name="clean_success">清理成功</string>
    <string name="clean_cache">清理缓存</string>
    <string name="clean_storage_tips">清理缓存可能需要一点时间，清理过程请耐心等候</string>
    <string name="feed_back">意见反馈</string>

    <string name="feedback_type_title">（单选）请选择您想反馈的问题点</string>
    <string name="upload_failed">上传失败</string>
    <string name="commit_success">提交成功</string>
    <string name="down">完成</string>
    <string name="pay_type">支付方式</string>
    <string name="alipay">支付宝</string>
    <string name="weixin_uninstalled">微信未安装</string>
    <string name="pay_canceled">支付已取消</string>
    <string name="pay_failure">支付失败</string>
    <string name="weixin">微信</string>
    <string name="close">关闭</string>
    <string name="feed_back_thank_tips">您的反馈我们会认真查看，并尽快修复及完善 \n 感谢您对狱务通一如既往的支持。</string>
    <string name="pay_right_now">立即支付</string>
    <string name="back_main_page">返回主页</string>
    <string name="life_circle">生活圈</string>
    <string name="publish_life_circle">发生活圈</string>
    <string name="publish">发布</string>
    <string name="think_this_moment">这一刻的想法...</string>
    <string name="publish_success">发布成功</string>

    <string name="liked">您已经点过赞了</string>
    <string name="add_friend">添加朋友</string>
    <string name="publish_failed">发布失败</string>
    <string name="please_cost100_at_least">请输入咨询金额，不少于100元</string>
    <string name="yuan_100">100元</string>
    <string name="yuan_200">200元</string>
    <string name="yuan_300">300元</string>
    <string name="consulting_time_length">咨询时长</string>

    <string name="please_enter_nicknam">请输入昵称</string>
    <string name="please_enter_phone">请输入手机号</string>
    <string name="modify_the_nickname_failure">修改昵称失败</string>
    <string name="i_is">我是</string>
    <string name="friend_verification">朋友验证</string>
    <string name="add_friend_success">添加好友请求发送成功</string>
    <string name="add_friend_fail">添加好友请求发送失败</string>
    <string name="not_add_my_phone">你不能添加自己到通讯录</string>
    <string name="friend_Info">好友信息</string>
    <string name="all_order">所有订单</string>
    <string name="feedback_success">反馈成功</string>
    <string name="account_logout">您的账号已经在其它地方登录</string>
    <string name="file_is_damaged">文件损坏,重新下载</string>
    <string name="cancel">取消</string>
    <string name="go_set">前去设置</string>
    <string name="permission_is_not_open">权限未开启，暂无法使用此功能</string>
    <string name="balance">账户余额</string>
    <string name="balance_now">当前余额</string>
    <string name="alipay_account">支付宝账号</string>
    <string name="apply_withdrawals">申请提现</string>
    <string name="bind">已绑定</string>
    <string name="un_bind">未绑定</string>
    <string name="choose_professional">选择专业领域</string>`
    <string name="ok">确定</string>
    <string name="can_choose_at_more_three">可多选（不超过三个）</string>
    <string name="at_more_three">最多选择三个</string>
    <string name="now_support_weichat">暂不支持微信,敬请期待</string>
    <string name="please_expectantly">敬请期待</string>
    <string name="look">查看</string>
    <string name="new_friend">新的朋友</string>
    <string name="address_book">通讯录</string>
    <string name="friend_relationship_exists">好友关系已存在</string>
    <string name="set">设置</string>
    <string name="please_enter_the_code">请输入验证码</string>
    <string name="change_phone_number">更换手机号码</string>
    <string name="next_step">下一步</string>
    <string name="agreed">已同意</string>
    <string name="refused">已拒绝</string>
    <string name="ignored">已忽略</string>
    <string name="expired">已过期</string>
    <string name="untreated">未处理</string>
    <string name="add_fail">添加失败</string>
    <string name="add_exception">添加异常</string>
</resources>
