<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:background="@color/white"
              android:orientation="vertical">

    <ImageView
        android:id="@+id/iv_confirm_img"
        android:layout_width="150dp"
        android:layout_height="97dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dimen_30"
        android:src="@mipmap/pay_success"/>

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="@dimen/dimen_200"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dimen_13"
        android:gravity="center"
        android:text="@string/pay_success"
        android:textColor="@color/text_black"
        android:textSize="@dimen/text_big_large"
        />
    <TextView
        android:id="@+id/tv_content"
        android:layout_width="@dimen/dimen_330"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:layout_marginTop="@dimen/dimen_10"
        android:text="@string/pay_success_laws_tips"
        android:textColor="@color/text_black"
        android:textSize="@dimen/text_big"
        />

    <View
        android:layout_width="match_parent"
        android:layout_marginStart="@dimen/dimen_15"
        android:layout_marginEnd="@dimen/dimen_15"
        android:layout_marginTop="@dimen/dimen_30"
        android:layout_height="@dimen/dimen_1"
        android:background="@color/gray_line"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_62"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="80dp"
            android:layout_height="30dp"
            android:background="@drawable/shape_rectangle_stroke_20r"
            android:gravity="center"
            android:text="@string/back_main_page"
            android:textColor="@color/dark_blue"
            android:textSize="@dimen/text_common"/>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/tv_confirm"
            android:layout_width="80dp"
            android:layout_height="30dp"
            android:background="@drawable/shape_rectangle_stroke_20r"
            android:gravity="center"
            android:text="@string/order_detail"
            android:textColor="@color/dark_blue"
            android:textSize="@dimen/text_common"/>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>

    </LinearLayout>
</LinearLayout>