<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <include
        layout="@layout/default_top"/>


    <ImageView
        android:id="@+id/iv_pay_status"
        android:layout_width="156dp"
        android:layout_height="138dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="60dp"
        android:src="@mipmap/pay_failure"/>

    <TextView
        android:id="@+id/tv_pay_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dimen_12"
        android:textColor="#ffbd0808"
        android:textSize="@dimen/text_big"
        tools:text="支付失败"
        />

    <TextView
        android:id="@+id/tv_pay_money"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dimen_20"
        android:textColor="@color/text_black"
        android:textSize="30sp"
        android:textStyle="bold"
        tools:text="¥500"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:layout_marginTop="@dimen/dimen_15"
        android:text="@string/feed_back_thank_tips"
        android:textColor="#ff666666"
        android:lineSpacingExtra="@dimen/dimen_8"
        android:textSize="12sp"
        />

    <FrameLayout
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_18"
            android:textColor="@color/text_gray"
            android:textSize="@dimen/text_common"
            android:text="@string/pay_type"
            />

        <TextView
            android:id="@+id/tv_pay_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="@dimen/dimen_18"
            android:layout_marginStart="@dimen/dimen_18"
            android:textColor="@color/text_gray"
            android:textSize="@dimen/text_common"
            tools:text="@string/alipay"
            />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/fl_prisoner_name"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_13">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_18"
            android:textColor="@color/text_gray"
            android:textSize="@dimen/text_common"
            tools:text="汇款至"
            />

        <TextView
            android:id="@+id/tv_pay_prisoner_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="@dimen/dimen_18"
            android:layout_marginStart="@dimen/dimen_18"
            android:textColor="@color/text_gray"
            android:textSize="@dimen/text_common"
            tools:text="王二"
            />

    </FrameLayout>
</LinearLayout>